# fieldenum

./: .cspell.json  .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: co.yaml  testing.yaml
docs/: README-ko.md  railroad-oriented-ko.ipynb
src/fieldenum/: __init__.py  _fieldenum.py  _flag.py  _utils.py  enums.py  exceptions.py
tests/: test_doc.py  test_enums.py  test_fieldenum.py  test_flag.py  test_type_hints.py
