[tool.poetry]
name = "fieldenum"
version = "0.0.1"
description = "Rust-like fielded Enums in Python"
authors = ["ilotoki0804 <ilotoki0804@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
ipykernel = "^6.29.4"
pytest = "^8.2.1"

[tool.ruff]
line-length = 200

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
