[tool.poetry]
name = "fieldenum"
version = "0.2.0"
description = "Rust-like fielded Enums in Python"
authors = ["ilotoki0804 <ilotoki0804@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = [
    "enum",
    "dataclass",
    "rust",
    "functional",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: Korean",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[tool.poetry.urls]
Repository = "https://github.com/ilotoki0804/fieldenum"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
ruff = "^0.5.6"
ipykernel = "^6.29.4"
pytest = "^8.2.1"
notebook = "^7.2.0"

[tool.ruff]
line-length = 120
exclude = [".venv", "tests"]

[tool.ruff.lint]
ignore = ["F821"]

[tool.coverage.report]
exclude_also = [
    "unreachable",
    "case other:",
    "assert False",
    "if (typing\\.)?TYPE_CHECKING:",
    "@(typing\\.)?deprecated",
    "@overload",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
