[project]
name = "fieldenum"
version = "0.2.0"
description = "Rust-like fielded Enums in Python"
authors = [{ name = "ilotoki0804", email = "ilotoki0804@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "enum",
    "dataclass",
    "rust",
    "functional",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: Korean",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Repository = "https://github.com/ilotoki0804/fieldenum"
Funding = "https://buymeacoffee.com/ilotoki0804"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "notebook>=7.2.0",
]

[tool.ruff]
line-length = 120
exclude = [".venv", "tests"]

[tool.ruff.lint]
ignore = ["F821"]

[tool.coverage.report]
exclude_also = [
    "unreachable",
    "case other:",
    "assert False",
    "if (typing\\.)?TYPE_CHECKING:",
    "@(typing\\.)?deprecated",
    "@overload",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
